--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.31.0
-sentence-transformers==2.5.0
-faiss-cpu==1.7.4
-transformers==4.37.2
-torch==2.1.2
-numpy==1.24.3
-sentencepiece==0.1.99
+streamlit
+sentence-transformers
+faiss-cpu
+transformers
+torch
+numpy
+sentencepiece
 python-dotenv
 streamlit_webrtc
 SpeechRecognition
